--- a/index.html
+++ b/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 1</title>
-
     <link rel="stylesheet" href="styles.css">
+    <title>Grid learning</title>
 </head>
-
 <body>
-    <!-- 🙅🚫🚨 No need to touch anything in this HTML file! 🙅🚫🚨 -->
-    <h1>Our Products</h1>
+    <h1>Grid Basics</h1>
+    <span>test</span>
     <div id="container">
-        <div class="card">
-            <div class="image"><span class="text">This is a product</span></div>
-            <span class="title">Cool Product</span>
-            <span class="price">$100</span>
-        </div>
-        <div class="card">
-            <div class="image"><span class="text">This is a product.</span></div>
-            <span class="title">Cool Product</span>
-            <span class="price">$200</span>
-        </div>
-        <div class="card">
-            <div class="image"><span class="text">This is a product.</span></div>
-            <span class="title">Cool Product</span>
-            <span class="price">$300</span>
-        </div>
+        <div class="box" style="background-color: red;">FIRST</div>
+        <div class="box" style="background-color: green;">SECOND</div>
+        <div class="box" style="background-color: blue;">THIRD</div>
+        <div class="box" style="background-color: violet;">FOURTH</div>
+        <div class="box" style="background-color: pink;">FIFTH</div>
+        <div class="box" style="background-color: yellow;">SIXTH</div>
+        <div class="box" style="background-color: brown;">SEVENTH</div>
+        <div class="box" style="background-color: greenyellow;">EIGHT</div>
+        <div class="box" style="background-color: blueviolet;">NINE</div>
+        <div class="box" style="background-color: tan;">TEN</div>
     </div>
 </body>
-
 </html>
