--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise 2</title>
+
     <link rel="stylesheet" href="styles.css">
-    <title>Grid learning</title>
 </head>
+
 <body>
-    <h1>Grid Basics</h1>
-    <span>test</span>
-    <div id="container">
-        <div class="box" style="background-color: red;">FIRST</div>
-        <div class="box" style="background-color: green;">SECOND</div>
-        <div class="box" style="background-color: blue;">THIRD</div>
-        <div class="box" style="background-color: violet;">FOURTH</div>
-        <div class="box" style="background-color: pink;">FIFTH</div>
-        <div class="box" style="background-color: yellow;">SIXTH</div>
-        <div class="box" style="background-color: brown;">SEVENTH</div>
-        <div class="box" style="background-color: greenyellow;">EIGHT</div>
-        <div class="box" style="background-color: blueviolet;">NINE</div>
-        <div class="box" style="background-color: tan;">TEN</div>
+    <!-- 🙅🚫🚨 No need to touch anything in this HTML file! 🙅🚫🚨 -->
+    <div class="container">
+        <header class="header">THIS IS OUR PAGE HEADER</header>
+        <nav class="navbar">THIS IS OUR NAVBAR</nav>
+        <main class="main">THIS IS THE MAIN PAGE CONTENT</main>
+        <footer class="footer">THIS IS OUR PAGE FOOTER</footer>
     </div>
 </body>
+
 </html>
