--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 2</title>
+    <title>Exercise 3</title>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <!-- 🙅🚫🚨 No need to touch anything in this HTML file! 🙅🚫🚨 -->
-    <div class="container">
-        <header class="header">THIS IS OUR PAGE HEADER</header>
-        <nav class="navbar">THIS IS OUR NAVBAR</nav>
-        <main class="main">THIS IS THE MAIN PAGE CONTENT</main>
-        <footer class="footer">THIS IS OUR PAGE FOOTER</footer>
+    <div id="container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+        <div class="box">6</div>
     </div>
 </body>
 
