grid with paragraph

--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 3</title>
-
     <link rel="stylesheet" href="styles.css">
+    <title>Grid learning</title>
 </head>
-
 <body>
-    <!-- 🙅🚫🚨 No need to touch anything in this HTML file! 🙅🚫🚨 -->
+    <h1>Grid Basics</h1>
+    <span>test</span>
     <div id="container">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis nihil maiores voluptas ullam expedita quo distinctio nobis provident minus perspiciatis fugit laudantium architecto, dicta iure repellendus voluptates debitis excepturi ad!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis nihil maiores voluptas ullam expedita quo distinctio nobis provident minus perspiciatis fugit laudantium architecto, dicta iure repellendus voluptates debitis excepturi ad!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis nihil maiores voluptas ullam expedita quo distinctio nobis provident minus perspiciatis fugit laudantium architecto, dicta iure repellendus voluptates debitis excepturi ad!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis nihil maiores voluptas ullam expedita quo distinctio nobis provident minus perspiciatis fugit laudantium architecto, dicta iure repellendus voluptates debitis excepturi ad!</p>
     </div>
 </body>
-
 </html>
